<resources>
    <string name="app_name">Lighting Control</string>

    <string name="rgb">RGB</string>
    <string name="hsv">HSV</string>

    <string name="red">Red: %1$d</string>
    <string name="green">Green: %1$d</string>
    <string name="blue">Blue: %1$d</string>

    <string name="hue">Hue: %1$d°</string>
    <string name="saturation">Saturation: %1$d%%</string>
    <string name="value">Value: %1$d%%</string>

    <string name="version">Server-Version: %1$s</string>

    <string name="speed">Speed: %1$d</string>

    <string name="send">Send</string>

    <string name="static_color">Static color</string>

    <string name="save_as_default">Save as default</string>

    <string name="reset">Reset</string>
    <string name="modes">Modes</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="save_as_default_desc">Save the current color as default color?</string>
    <string name="update">Update mode</string>
    <string name="gpio_control">GPIO Control</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high">High/On</string>
    <string name="low">Low/Off</string>
    <string name="gpio_number">GPIO Number</string>
    <string name="gpio_info">Pins have to be Broadcom GPIO Numbers</string>

</resources>
