<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.se7_kn8.lighting_control.viewmodel.StaticColorViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_rgb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/rgb"
                app:layout_constraintBottom_toBottomOf="@+id/switch_color_space"
                app:layout_constraintEnd_toStartOf="@+id/switch_color_space"
                app:layout_constraintTop_toTopOf="@+id/switch_color_space" />

            <TextView
                android:id="@+id/text_hsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hsv"
                app:layout_constraintBottom_toBottomOf="@+id/switch_color_space"
                app:layout_constraintStart_toEndOf="@+id/switch_color_space"
                app:layout_constraintTop_toTopOf="@+id/switch_color_space" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_color_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:background="@{viewModel.androidColor}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_color_space" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/red_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="@={viewModel.red}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/text_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{@string/red(viewModel.red)}"
                app:layout_constraintTop_toBottomOf="@+id/red_seek"
                tools:layout_editor_absoluteX="0dp"
                tools:text="Red: 123" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/green_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="255"
                android:progress="@={viewModel.green}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_red" />

            <TextView
                android:id="@+id/text_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{@string/green(viewModel.green)}"
                app:layout_constraintTop_toBottomOf="@+id/green_seek"
                tools:layout_editor_absoluteX="16dp"
                tools:text="Green: 231" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/blue_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="255"
                android:progress="@={viewModel.blue}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_green" />

            <TextView
                android:id="@+id/text_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{@string/blue(viewModel.blue)}"
                app:layout_constraintTop_toBottomOf="@+id/blue_seek"
                tools:layout_editor_absoluteX="0dp"
                tools:text="Blue: 213" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_blue"
                android:onClick="@{viewModel::onSend}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>